# wordClassifier

./: .gitignore  .gitmodules  README.md  common_tools.js  net_minifier.js  test_brain.js  test_synaptic.js  train-input.json
cpp/woldsTrainer/: CMakeLists.txt  woldsTrainer.sln
cpp/woldsTrainer/woldsTrainer/: ReadMe.txt  common_tools.h  woldsTrainer.cpp  woldsTrainer.vcxproj  woldsTrainer.vcxproj.filters
testcases/: cat.js  cat10.js  cat100.js  cat4.js  download.js  tests0-999.list.js
testcases/big/: cat.js  download_big.js
